--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     docker:
       # replace with your preferred image
-      - image: cimg/base:stable
+      - image: cimg/node:12.16
     working_directory: ~/repo
     steps:
           - checkout
